--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "pulp": "^12.3.0",
     "purescript-psa": "^0.7.2",
     "rimraf": "^2.6.2"
+  },
+  "dependencies": {
+    "purescript": "^0.12.0"
   }
 }
