Add web-html dependency
Since that is required now

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-web-dom": "^1.0.0"
+    "purescript-web-dom": "^1.0.0",
+    "purescript-web-html": "^1.0.0"
   }
 }
