Fix missing comma in bower.json

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
   ],
   "dependencies": {
     "purescript-web-dom": "^1.0.0",
-    "purescript-web-uievents": "^1.0.0"
+    "purescript-web-uievents": "^1.0.0",
     "purescript-web-html": "^1.0.0"
   }
 }
