Add CSSOM extensions to MouseEvent (#5)
Co-authored-by: Thomas Honeyman <admin@thomashoneyman.com>

--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   ],
   "dependencies": {
     "purescript-web-dom": "master",
+    "purescript-web-uievents": "master",
     "purescript-web-html": "master"
   }
 }
