--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,8 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-web-dom": "^5.0.0",
-    "purescript-web-html": "^3.0.0",
-    "purescript-web-uievents": "^3.0.0"
+    "purescript-web-dom": "master",
+    "purescript-web-html": "master",
+    "purescript-web-uievents": "master"
   }
 }
