--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,8 @@
     "package.json"
   ],
   "dependencies": {
-    "purescript-web-dom": "master",
-    "purescript-web-html": "master",
-    "purescript-web-uievents": "master"
+    "purescript-web-dom": "^6.0.0",
+    "purescript-web-html": "^4.0.0",
+    "purescript-web-uievents": "^4.0.0"
   }
 }
